--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-Bootloader/EFI/.DS_Store
-.DS_Store
 .*
+.DS_Store
+._.DS_Store
+.Spotlight-V100
+.Trashes
+._.metadata_never_index
+.TemporaryItems
+.Trashes
+.fseventsd
+.metadata_never_index
