--- a/EFI-Bootloader/EFI/CLOVER/config.plist
+++ b/EFI-Bootloader/EFI/CLOVER/config.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>ACPI</key>
 	<dict>
+		<key>#Sorted ACPI tables Count</key>
+		<integer>18</integer>
 		<key>AutoMerge</key>
 		<true/>
 		<key>Comment-DisabledAML</key>
@@ -533,7 +535,22 @@
 		<integer>0</integer>
 	</dict>
 	<key>CPU</key>
-	<dict/>
+	<dict>
+		<key>#BusSpeedkHz</key>
+		<integer>99768</integer>
+		<key>#EnabledCores</key>
+		<integer>2</integer>
+		<key>#FrequencyMHz</key>
+		<integer>2195</integer>
+		<key>#SavingMode</key>
+		<integer>255</integer>
+		<key>#TDP</key>
+		<false/>
+		<key>#TurboDisable</key>
+		<true/>
+		<key>#Type</key>
+		<string>0x0606</string>
+	</dict>
 	<key>Comment</key>
 	<string>This file is for Broadwell graphics that are natively supported</string>
 	<key>ConfigName</key>
@@ -599,6 +616,13 @@
 		<true/>
 		<key>Properties</key>
 		<dict>
+			<key>PciRoot(0x0)/Pci(0x1c,0x2)/Pci(0x0,0x0)</key>
+			<dict>
+				<key>built-in</key>
+				<data>
+				AQ==
+				</data>
+			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key># DVMT-prealloc</key>
@@ -626,54 +650,6 @@
 				<key>#enable-lspcon-support</key>
 				<data>
 				AQAAAA==
-				</data>
-				<key>#framebuffer-camellia</key>
-				<data>
-				AgAAAA==
-				</data>
-				<key>#framebuffer-con0-enable</key>
-				<data>
-				AQAAAA==
-				</data>
-				<key>#framebuffer-con0-pipe</key>
-				<data>
-				EgAAAA==
-				</data>
-				<key>#framebuffer-con1-enable</key>
-				<data>
-				AQAAAA==
-				</data>
-				<key>#framebuffer-con1-pipe</key>
-				<data>
-				EgAAAA==
-				</data>
-				<key>#framebuffer-con1-type</key>
-				<data>
-				AAgAAA==
-				</data>
-				<key>#framebuffer-con2-enable</key>
-				<data>
-				AQAAAA==
-				</data>
-				<key>#framebuffer-con2-pipe</key>
-				<data>
-				EgAAAA==
-				</data>
-				<key>#framebuffer-con2-type</key>
-				<data>
-				AAgAAA==
-				</data>
-				<key>#framebuffer-memorycount</key>
-				<data>
-				AwAAAA==
-				</data>
-				<key>#framebuffer-pipecount</key>
-				<data>
-				AwAAAA==
-				</data>
-				<key>#framebuffer-portcount</key>
-				<data>
-				AwAAAA==
 				</data>
 				<key>AAPL,GfxYTile</key>
 				<data>
@@ -703,9 +679,49 @@
 				<data>
 				AQAAAA==
 				</data>
+				<key>framebuffer-camellia</key>
+				<data>
+				AgAAAA==
+				</data>
+				<key>framebuffer-con0-enable</key>
+				<data>
+				AQAAAA==
+				</data>
+				<key>framebuffer-con0-pipe</key>
+				<data>
+				EgAAAA==
+				</data>
+				<key>framebuffer-con1-enable</key>
+				<data>
+				AQAAAA==
+				</data>
+				<key>framebuffer-con1-pipe</key>
+				<data>
+				EgAAAA==
+				</data>
+				<key>framebuffer-con1-type</key>
+				<data>
+				AAgAAA==
+				</data>
+				<key>framebuffer-con2-enable</key>
+				<data>
+				AQAAAA==
+				</data>
+				<key>framebuffer-con2-pipe</key>
+				<data>
+				EgAAAA==
+				</data>
+				<key>framebuffer-con2-type</key>
+				<data>
+				AAgAAA==
+				</data>
 				<key>framebuffer-fbmem</key>
 				<data>
 				AACQAA==
+				</data>
+				<key>framebuffer-memorycount</key>
+				<data>
+				AwAAAA==
 				</data>
 				<key>framebuffer-mobile</key>
 				<data>
@@ -714,6 +730,14 @@
 				<key>framebuffer-patch-enable</key>
 				<data>
 				AQAAAA==
+				</data>
+				<key>framebuffer-pipecount</key>
+				<data>
+				AwAAAA==
+				</data>
+				<key>framebuffer-portcount</key>
+				<data>
+				AwAAAA==
 				</data>
 				<key>framebuffer-stolenmem</key>
 				<data>
@@ -760,7 +784,20 @@
 		<key>Custom</key>
 		<dict>
 			<key>Entries</key>
-			<array/>
+			<array>
+				<dict>
+					<key>Hidden</key>
+					<false/>
+					<key>Type</key>
+					<string>OSXRecovery</string>
+				</dict>
+				<dict>
+					<key>Type</key>
+					<string>Windows</string>
+					<key>Title</key>
+					<string>Windows</string>
+				</dict>
+			</array>
 		</dict>
 		<key>CustomIcons</key>
 		<false/>
@@ -819,13 +856,15 @@
 	<key>KernelAndKextPatches</key>
 	<dict>
 		<key>#Number of KextsToPatch</key>
-		<integer>9</integer>
+		<integer>12</integer>
 		<key>#Number of Patchs To Kernel</key>
 		<integer>2</integer>
 		<key>AppleIntelCPUPM</key>
 		<true/>
 		<key>AppleRTC</key>
 		<true/>
+		<key>Broadwell-Comment</key>
+		<string>Broadwell CPU supportable on 10.15.x and prior by using FakeCPUID</string>
 		<key>Debug</key>
 		<false/>
 		<key>DellSMBIOSPatch</key>
@@ -1031,6 +1070,56 @@
 				<key>Replace</key>
 				<data>
 				g/8/Dw==
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Wi-Fi Override RegDomain 1</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				g7sgCAAABnRk
+				</data>
+				<key>Name</key>
+				<string>com.apple.driver.AirPort.Atheros40</string>
+				<key>Replace</key>
+				<data>
+				g7sgCAAABus2
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Wi-Fi Override RegDomain 2</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				ZseDFgkAAEMAZrhDAA==
+				</data>
+				<key>Name</key>
+				<string>com.apple.driver.AirPort.Atheros40</string>
+				<key>Replace</key>
+				<data>
+				ZseDFgkAAAAAZrgAAA==
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Fix Bluetooth 30 seconds delay patch</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				D4cHAQ==
+				</data>
+				<key>MatchOS</key>
+				<string>10.14.x</string>
+				<key>Name</key>
+				<string>com.apple.iokit.IOBluetoothHostControllerUSBTransport</string>
+				<key>Replace</key>
+				<data>
+				D4QHAQ==
 				</data>
 			</dict>
 		</array>
